tests/e2e/pass/m15_regress1.ep
# EXIT: 18
type RegressionToken {
    kind: i64
}
fun main(): void {
    let a = 5
    let b = 6
    let c = 7
    let arr = new RegressionToken[1]
    os.ExitProcess(a + b + c)
}
