tests/e2e/fail/array_len_field.ep
# COMPILE_ERROR: type u8[] has no field 'len'
fun main(): void {
    let values = new u8[]
    os.ExitProcess(values.len)
}
